--- a/about.html
+++ b/about.html
@@ -85,7 +85,7 @@ position:relative;
 
 
 <p>
-DarkScript Software is developing complex AI environments for game engines.
+DarkScript Software is an indie game developer.
 
 </p>
 
