--- a/index.html
+++ b/index.html
@@ -86,12 +86,16 @@ position:relative;
 </font></h4>
 
 
-<a href="https://x.com/_darkscript">
+<a href="https://x.com/DarkScriptSoft" target="blank">
 <i class="fab fa-twitter" style="font-size:30px;"></i></a> &nbsp
 
-<a href="https://github.com/darkscriptsoftware">
+<a href="https://github.com/darkscriptsoftware" target="blank">
 <i class="fab fa-github-square" style="font-size:30px;"></i></a> &nbsp
 
+<!--
+<a href="https://discord.com/invite/beMD4xg4" target="blank">
+<i class="fab fa-discord" style="font-size:30px;"></i></a> &nbsp
+-->
 
 <a href="https://darkscriptsoftware.itch.io/" target="blank">
 <i class="fab fa-itch-io" style="font-size:30px;"></i></a> &nbsp
