--- a/about.html
+++ b/about.html
@@ -86,7 +86,6 @@ position:relative;
 
 <p>
 DarkScript Software is an indie game developer.
-
 </p>
 
 
@@ -100,3 +99,6 @@ DarkScript Software is an indie game developer.
 <br>
 
 </div>
+
+</body>
+</html>
