--- a/post-internet-reminiscences.html
+++ b/post-internet-reminiscences.html
@@ -1,5 +1,3 @@
-
-
 <!doctype html>
 <html>
 <head>
@@ -14,11 +12,11 @@
 ╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝╚═╝  ╚═╝╚══════╝ ╚═════╝╚═╝  ╚═╝╚═╝╚═╝        ╚═╝       ╚══════╝ ╚═════╝ ╚═╝        ╚═╝    ╚══╝╚══╝ ╚═╝  ╚═╝╚═╝  ╚═╝╚══════╝
 -->
 
-<link href="css/fontawesome/css/all.css" rel="stylesheet"> <!--load all styles -->
-<link rel="shortcut icon" href="img/darkscript_icon.ico" type="image/x-icon"/>
+
+<link rel="shortcut icon" href="darkscript_icon.ico" type="image/x-icon"/>
 
 <meta charset="UTF-8">
-<title>Darkscript Software</title>
+<title>Darkscript Software | Blog</title>
 <style type="text/css">
 
 body {
@@ -74,34 +72,27 @@ position:relative;
 </head>
 <body  background="img/BODY_BG.fw.png" marginheight="0" marginwidth="0">
 
-<div class="bodyposter" align="center">
 
-<img src="img/logo-dss2.fw.png" width="250px;"/>
+
+<div class="bodyposter">
+
+
+<h1>Post-Internet Reminiscences</h1>
 
 <br>
 
-<h4><font style="color:gray">
-<a href="about.html">About</a> |
-<a href="games.html">Games</a> |
-<a href="systems.html">Systems</a> |
-<a href="contact.html">Contact</a>
-</font></h4>
+<p>
+Coming soon.
+</p>
 
+<br>
 
-<a href="https://x.com/DarkScriptSoft" target="blank">
-<i class="fab fa-twitter" style="font-size:30px;"></i></a> &nbsp
+<br><br><br>
 
-<a href="https://github.com/darkscriptsoftware" target="blank">
-<i class="fab fa-github-square" style="font-size:30px;"></i></a> &nbsp
-
-<!--
-<a href="https://discord.com/invite/beMD4xg4" target="blank">
-<i class="fab fa-discord" style="font-size:30px;"></i></a> &nbsp
--->
-
-<a href="https://darkscriptsoftware.itch.io/" target="blank">
-<i class="fab fa-itch-io" style="font-size:30px;"></i></a> &nbsp
-
+<h5>
+<a href="games.html">Back</a> |
+<a href="index.html">Home</a>
+</h5>
 
 
 <br>
