--- a/vapor-lit-gamification.html
+++ b/vapor-lit-gamification.html
@@ -83,7 +83,7 @@ position:relative;
 
 
 <p>
-Comming soon.<br>
+Coming soon.<br>
 Vapor-Lit Gamification is a "literature gamification" project. Learn
 more at <a href="http://www.vaporliterature.com" target="blank">www.vaporliterature.com</a>
 </p>
