--- a/systems.html
+++ b/systems.html
@@ -90,7 +90,7 @@ position:relative;
 <br>
 
 <a href="#">
-<h2>Ethology-Based Complex Animal Systems</h2></a>
+<h2>Ethology-Based Advanced AI Animal Systems</h2></a>
 <font color="grey">Last update: 08.12.2023</font>
 
 <br>
