--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ position:relative;
 
 <div class="bodyposter" align="center">
 
-<img src="img/logo-dss2.fw.png" width="250px;"/>
+<img src="img/logo-dss3.png" width="250px;"/>
 
 <br>
 
