--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ position:relative;
 
 <div class="bodyposter" align="center">
 
-<img src="img/logo-dss3.png" width="250px;"/>
+<img src="img/logo-dss2.png" width="250px;"/>
 
 <br>
 
@@ -103,9 +103,12 @@ position:relative;
 <i class="fab fa-itch-io" style="font-size:30px;"></i></a> &nbsp
 
 
-
 <br>
 
+</div>
+
+<div id="copyright" class="container" align="center">
+	<p>© DarkScript Software. All rights reserved.  </p>
 </div>
 
 </body>
